<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key">YOUR_CLIENT_KEY</string>

    <string name="app_name">STALKIE</string>

    <string name="hello_world">Hello World</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="error_blank_username">Blank Username</string>
    <string name="error_intro">Error:</string>
    <string name="error_not_an_email">Not a valid Email ID.</string>
    <string name="error_blank_password">Blank Password</string>
    <string name="error_join">and</string>
    <string name="error_end">. Please enter details again.</string>
    <string name="action_Profile">Profile</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_create_meeting">Create Meeting</string>
    <string name="action_done">Done</string>
    <string name="action_back">Back</string>
    <string name="error_mismatched_passwords">Enter the same password twice</string>

    <item name="tool_bar_meeting" type="id">tool_bar_meeting</item>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_meeting">Meeting</string>
    <string name="title_activity_temp">TempActivity</string>
    <string name="title_section1">Notifications</string>
    <string name="title_section2">Meetings</string>
    <string name="title_section3">Xyz</string>
    <string name="title_activity_view_location">Participants Location</string>
    <string name="title_activity_meeting">MeetingActivity</string>

    <string name="progress_login">Logging you in&#8230;</string>
    <string name="progress_signup">Signing you up&#8230;</string>
</resources>
