<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:compat="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_profile"
        android:title="@string/action_Profile"
        android:orderInCategory="100"
        compat:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        compat:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        compat:showAsAction="never"/>
    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        compat:showAsAction="never"/>
    <item
        android:id="@+id/action_add"
        android:orderInCategory="200"
        android:title="@string/action_add"
        android:icon="@mipmap/ic_add_white_24dp"
        compat:showAsAction="ifRoom">
    </item>
</menu>
